Avances generales de diseño.

--- a/index.html
+++ b/index.html
@@ -37,20 +37,20 @@
       <div class="nine">Number of People</div>
       <div>can't be zero</div>
     </div>
-    <input class="input_ppl">
+    <input class="input_ppl" placeholder="0">
   </div> 
 
   <!-- ESTE ES EL DISPLAY -->
     <div class="display"> 
       <div class="amount">
-        <div>
+        <div class="tot_text">
           <div>Tip Amount</div>
           <div class="pers">/ person</div>  
         </div>
         <div class="zero">0.00</div>
       </div>
       <div  class="total">
-        <div>
+        <div class="tot_text">
           <div>Total</div>
           <div class="pers">/ person</div>  
         </div>
