--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500&family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="main.css">
+
 </head>
 <body>
 <main class="calculator">
@@ -18,26 +19,26 @@
     <div class="input">  
 
         <div class="bill">Bill</div>
-        <div class="visor">
+        <input class="visor" placeholder="0" id="bill">
           <div></div>
           <div></div>
-        </div>
+        </input>
         
         <div class="tip">Select Tip %</div>
 
     <div class="pad">
-        <button class="upper">5%</button>
-        <button class="upper">10%</button>
-        <button class="upper">15%</button>
-        <button class="bottom">25%</button>
-        <button class="bottom">50%</button>
-        <input class="custom bottom" placeholder="Custom">
+        <button class="boton" id="b1" onClick="get_id(this.id)">5%</button>
+        <button class="boton" id="b2" onClick="get_id(this.id)">10%</button>
+        <button class="boton" id="b3" onClick="get_id(this.id)">15%</button>
+        <button class="boton" id="b4" onClick="get_id(this.id)">25%</button>
+        <button class="boton" id="b5" onClick="get_id(this.id)">50%</button>
+        <input class="custom bottom" placeholder="Custom" id="custom">
     </div>
     <div class="ppl">
       <div class="nine">Number of People</div>
       <div>can't be zero</div>
     </div>
-    <input class="input_ppl" placeholder="0">
+    <input class="input_ppl"  placeholder="0" id="pers">
   </div> 
 
   <!-- ESTE ES EL DISPLAY -->
@@ -47,14 +48,14 @@
           <div>Tip Amount</div>
           <div class="pers">/ person</div>  
         </div>
-        <div class="zero">0.00</div>
+        <div class="zero" id="pers_tip">0.00</div>
       </div>
       <div  class="total">
         <div class="tot_text">
           <div>Total</div>
           <div class="pers">/ person</div>  
         </div>
-        <div class="zero">0.00</div>
+        <div class="zero" id="pers_bill">0.00</div>
       </div>   
       <div class="reset"><span>RESET</span></div>
   </div>
@@ -69,5 +70,6 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div>
+  <script src="app.js"></script>
 </body>
 </html>
