Con algunos arreglos visuales.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <button class="boton" id="b3" onmouseover="perc_id(this.id)" onmouseup="calculo()">15%</button>
         <button class="boton" id="b4" onmouseover="perc_id(this.id)" onmouseup="calculo()">25%</button>
         <button class="boton" id="b5" onmouseover="perc_id(this.id)" onmouseup="calculo()">50%</button>
-        <input class="custom bottom" placeholder="Custom" id="custom" onkeyup="calcustom()">
+        <input class="custom bottom" placeholder="Custom" id="custom" onfocus="this.placeholder = ''" onkeyup="calcustom()">
     </div>
     <div class="ppl">
       <div class="nine">Number of People</div>
